--- a/autotune/Makefile.am
+++ b/autotune/Makefile.am
@@ -20,16 +20,9 @@
 # ========LICENCE========
 #/
 
-AM_CXXFLAGS = @DEFAULT_CFLAGS@ -I$(top_srcdir)
-
-# Forcing compilation without the precompiled libraries for the autotuning only
-# if FFLASFFPACK_PRECOMPILED
-# AM_LDFLAGS = $(CBLAS_LIBS) $(GIVARO_LIBS) $(CUDA_LIBS) $(PARLIBS) \
-# 	$(top_builddir)/fflas-ffpack/interfaces/libs/libfflas.la \
-# 	$(top_builddir)/fflas-ffpack/interfaces/libs/libffpack.la
-# else
-AM_LDFLAGS = $(CBLAS_LIBS) $(GIVARO_LIBS) $(CUDA_LIBS) $(PARLIBS)
-#endif
+AM_CXXFLAGS = $(FFLASFFPACK_CXXFLAGS) $(GIVARO_CFLAGS) $(BLAS_CFLAGS) $(PARFLAGS)
+AM_CPPFLAGS = -I$(top_srcdir)
+LDADD = $(GIVARO_LIBS) $(BLAS_LIBS) $(PARLIBS)
 
 AUTOTUNE_FGEMM = winograd-modular-float winograd-modular-double winograd-modularbalanced-float winograd-modularbalanced-double
 AUTOTUNE_PLUQ = pluq
