--- a/configure.ac
+++ b/configure.ac
@@ -183,7 +183,7 @@ dnl With GCC 4.x, the default ABI version is 2. With this version, __m128 and
 dnl __m256 are the same types and therefore we cannot have overloads for both
 dnl types without linking error. It is fixed in ABI version 4.
 dnl FIXME: Why do we set ABI version to 6 ?
-AS_IF([test "x$CCNAM" = "xgccl5"],[REQUIRED_FLAGS+=" -fabi-version=6"])
+AS_CASE([$CCNAM], [gcc4*], [REQUIRED_FLAGS+=" -fabi-version=6"])
 
 
 AC_SUBST(REQUIRED_FLAGS)
