add bruhatgen file to install

--- a/fflas-ffpack/ffpack/Makefile.am
+++ b/fflas-ffpack/ffpack/Makefile.am
@@ -54,6 +54,7 @@ pkgincludesub_HEADERS=        \
 		ffpack_rankprofiles.inl\
 		ffpack_ftrstr.inl\
 		ffpack_ftrssyr2k.inl\
+		ffpack_bruhatgen.inl\
 		$(multiprecision)
 
 
