--- a/.travis.yml
+++ b/.travis.yml
@@ -93,6 +93,7 @@ install:
   - echo "CXX=${CXX}"
   - export FC=${GCC_VERSION:+gfortran-${GCC_VERSION}}
   - echo "FC=${FC}"
+  - gcc -march=native -Q --help=target
 
 
 before_script:
