--- a/.travis.yml
+++ b/.travis.yml
@@ -81,7 +81,7 @@ matrix:
     - os: osx
       compiler: clang
       before_install:
-      - brew update
+      - brew update > brew-update.log 2>&1 || cat brew-update.log
       - brew list automake &>/dev/null || brew install automake
       - brew list autoconf &>/dev/null || brew install autoconf
       - brew list libtool &>/dev/null || brew install libtool
