--- a/.travis.yml
+++ b/.travis.yml
@@ -81,9 +81,10 @@ matrix:
     - os: osx
       compiler: clang
       before_install:
-      - brew update
-      - brew uninstall automake && brew install automake
-      - brew install autoconf libtool
+      - brew update > brew-update.log 2>&1 || cat brew-update.log
+      - brew list automake &>/dev/null || brew install automake
+      - brew list autoconf &>/dev/null || brew install autoconf
+      - brew list libtool &>/dev/null || brew install libtool
 #      - brew install homebrew/science/openblas
 
 install:
