--- a/.github/workflows/ci-sage.yml
+++ b/.github/workflows/ci-sage.yml
@@ -299,10 +299,36 @@ jobs:
       fail-fast: false
       max-parallel: 4
       matrix:
-        os: [ macos-10.15, macos-11.0 ]
-        tox_system_factor: [homebrew-macos, homebrew-macos-python3_xcode, homebrew-macos-python3_xcode-nokegonly, conda-forge-macos]
+        tox_system_factor: [homebrew-macos, conda-forge-macos]
         tox_packages_factor: [minimal, standard]
-        xcode_version_factor: [11.7, default, 12.3]
+        # As of 2021-03, default xcode is 12.4
+        # https://github.com/actions/virtual-environments/blob/main/images/macos/macos-10.15-Readme.md#xcode
+        xcode_version_factor: [default]
+        os: [ macos-10.15, macos-11.0 ]
+        include:
+          # Test xcode 11.7 only on macos-10.15
+          - tox_system_factor: homebrew-macos
+            tox_packages_factor: minimal
+            xcode_version_factor: 11.7
+            os: macos-10.15
+          - tox_system_factor: homebrew-macos
+            tox_packages_factor: standard
+            xcode_version_factor: 11.7
+            os: macos-10.15
+          # python3_xcode is only accepted if enough packages are available from the system
+          # --> to test "minimal", we will need https://trac.sagemath.org/ticket/30949
+          - tox_system_factor: homebrew-macos-python3_xcode
+            tox_packages_factor: standard
+            xcode_version_factor: 11.7
+            os: macos-10.15
+          - tox_system_factor: homebrew-macos-python3_xcode
+            tox_packages_factor: standard
+            xcode_version_factor: default
+            os: macos-10.15
+          - tox_system_factor: homebrew-macos-python3_xcode
+            tox_packages_factor: standard
+            xcode_version_factor: default
+            os: macos-11.0
 
     needs: [dist]
 
