--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,7 @@ tests/test-pluq-check
 tests/test-simd
 tests/test-charpoly
 tests/test-maxdelayeddim
+tests/test-sss
 test-det-check
 test-fdot
 test-fspmm-recint
