--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,9 @@ benchmarks/benchmark-fsytrf
 benchmarks/benchmark-fspmv
 benchmarks/benchmark-fspmm
 benchmarks/benchmark-inverse
+benchmarks/benchmark-quasisep
 benchmarks/benchmark-charpoly
+benchmarks/benchmark-sss
 examples/det
 examples/pluq
 tests/regression-check
@@ -102,6 +104,7 @@ tests/test-pluq-check
 tests/test-simd
 tests/test-charpoly
 tests/test-maxdelayeddim
+tests/test-quasisep
 tests/test-sss
 test-det-check
 test-fdot
