--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,8 @@ benchmarks/benchmark-fspmv
 benchmarks/benchmark-fspmm
 benchmarks/benchmark-inverse
 benchmarks/benchmark-charpoly
+benchmarks/benchmark-sss
+benchmarks/benchmark-quasisep
 examples/det
 examples/pluq
 tests/regression-check
