fix perf publisher

--- a/configure.ac
+++ b/configure.ac
@@ -115,10 +115,11 @@ AC_C_BIGENDIAN(
 AS_ECHO([---------------------------------------])
 
 # Looking for OpenMP
+AC_OPENMP
 FF_CHECK_OMP
 
-PARFLAGS="${OMPFLAGS}"
-PARLIBS="${OMPFLAGS}"
+PARFLAGS="${OPENMP_CXXFLAGS}"
+PARLIBS="${OPENMP_CXXFLAGS}"
 AC_SUBST(PARFLAGS)
 AC_SUBST(PARLIBS)
 
