--- a/fflas-ffpack/field/Makefile.am
+++ b/fflas-ffpack/field/Makefile.am
@@ -27,9 +27,11 @@ pkgincludesubdir=$(pkgincludedir)/field
 RNS=rns.h			        \
 	rns.inl				\
 	rns-double.h			\
+rns-double-extended.h			\
 	rns-double-elt.h		\
 	rns-double.inl			\
 	rns-double-recint.inl		\
+	rns-double-extended.inl			\
 	rns-integer.h			\
 	rns-integer-mod.h
 
