add test suite for rns-double

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -77,6 +77,7 @@ BASIC_TESTS =               \
 		test-fgemv \
 		test-nullspace \
 		test-storage-transpose	\
+	  test-rns-double	\
 		regression-check
 
 if FFLASFFPACK_PRECOMPILED
@@ -162,6 +163,7 @@ test_interfaces_c_SOURCES = test-interfaces-c.c
 test_maxdelayeddim_SOURCES = test-maxdelayeddim.C
 #  test_fspmv_SOURCES = test-fspmv.C
 test_storage_transpose_SOURCES = test-storage-transpose.C
+test_rns_double_SOURCES = test-rns-double.C
 regression_check_SOURCES = regression-check.C
 
 test_solve_SOURCES = test-solve.C
