--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   release_dist:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     env:
       PREFIX: /tmp/build
     steps:
